--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -2084,7 +2084,7 @@
                                         <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
-                                              <div class="_miupcl"><svg viewBox="0 0 32 32"
+                                              <div class="img-grid"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
                                                   style="display: block; height: 24px; width: 24px; fill: currentcolor;">
@@ -2118,7 +2118,7 @@
                                         <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
-                                              <div class="_miupcl"><svg viewBox="0 0 32 32"
+                                              <div class="img-grid"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
                                                   style="display: block; height: 24px; width: 24px; fill: currentcolor;">
@@ -2153,7 +2153,7 @@
                                         <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
-                                              <div class="_miupcl"><svg viewBox="0 0 32 32"
+                                              <div class="img-grid"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
                                                   style="display: block; height: 24px; width: 24px; fill: currentcolor;">
@@ -5470,7 +5470,7 @@
                                         <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
-                                              <div class="_miupcl"><svg viewBox="0 0 32 32"
+                                              <div class="img-grid"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
                                                   style="display: block; height: 24px; width: 24px; fill: currentcolor;">
@@ -5504,7 +5504,7 @@
                                         <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
-                                              <div class="_miupcl"><svg viewBox="0 0 32 32"
+                                              <div class="img-grid"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
                                                   style="display: block; height: 24px; width: 24px; fill: currentcolor;">
@@ -5539,7 +5539,7 @@
                                         <div class="explore-filter-menu__list-label">
                                           <div class="flex">
                                             <div class="_13r0hxum">
-                                              <div class="_miupcl"><svg viewBox="0 0 32 32"
+                                              <div class="img-grid"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
                                                   style="display: block; height: 24px; width: 24px; fill: currentcolor;">
