--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -1856,11 +1856,11 @@
            <div class="_1wg7rw">
             <div class="_4y54ze" style="animation-delay: 250ms;">
              <section>
-              <div class="_kedp3u"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Ask a Superhost</h2></div>
+              <div class="heading-md"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Ask a Superhost</h2></div>
               <div class="_lvhhqo">
-               <button type="button" class="_15ut2yit">
+               <button type="button" class="horizontal-card-dark">
                 <span class="list-group-action__btn-body">
-                 <span class="_1wiynur">
+                 <span class="horizontal-card-dark__img">
                   <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
                     class="img-full"
@@ -1876,8 +1876,8 @@
                   </div>
                  </span>
                  <span class="flex-1">
-                  <div class="_f9uxok">Message Myrna</div>
-                  <div class="_1cecj8q">Get personalized answers from this experienced Host</div>
+                  <div class="horizontal-card-dark__title">Message Myrna</div>
+                  <div class="horizontal-card-dark__text">Get personalized answers from this experienced Host</div>
                  </span>
                 </span>
                </button>
@@ -1886,9 +1886,9 @@
             </div>
             <div class="_4y54ze" style="animation-delay: 400ms;">
              <section>
-              <div class="_kedp3u"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Read our best tips</h2></div>
+              <div class="heading-md"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Read our best tips</h2></div>
               <div class="_lvhhqo">
-               <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/resources/hosting-homes/a/how-to-define-what-kind-of-space-youre-hosting-361" class="_tx7p69r">
+               <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/resources/hosting-homes/a/how-to-define-what-kind-of-space-youre-hosting-361" class="card-dark">
                 <div class="lite-image" style="--dls-liteimage-padding-top: 55.9633%;">
                  <div class="absolute-center">
                   <img
@@ -1904,7 +1904,7 @@
                   <div class="lite-image-fallback" style="background-image: url('https://a0.muscache.com/im/pictures/beb16c28-11d4-4033-be7e-19d6baada826.jpg'); background-size: cover;"></div>
                  </div>
                 </div>
-                <span class="_1cfbqt9" role="text"><span class="_x4r3u7">How to define what kind of space you’re hosting</span><span class="_wfgfvf">1 min read</span></span>
+                <span class="card-dark__body" role="text"><span class="card-dark__title">How to define what kind of space you’re hosting</span><span class="card-dark__subtitle">1 min read</span></span>
                </a>
               </div>
              </section>
