--- a/edit/photos.html
+++ b/edit/photos.html
@@ -1415,7 +1415,7 @@
                                     <div class="">
                                       <div class="flex-content-between">
                                         <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
-                                          <span class="_kedp3u">Library</span>
+                                          <span class="heading-md">Library</span>
                                         </h2>
                                         <button type="button" class="btn-link-condensed">
                                           Manage
@@ -2969,7 +2969,7 @@
                                 <div class="main-content__details-cancel-button-wrapper">
                                   <div class="flex-content-between">
                                     <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
-                                      <span class="_kedp3u">Library</span>
+                                      <span class="heading-md">Library</span>
                                     </h2>
                                     <button type="button" class="btn-link-condensed" id="open-modal-manage">
                                       Manage
