--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -8006,7 +8006,7 @@
                                                   class="account-container__menu-container"
                                                 >
                                                   <div class="_h5cegly">
-                                                    <div class="_125gmrun">
+                                                    <div class="img-grid__inner">
                                                       <div
                                                         style="
                                                           display: grid;
