--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -16289,7 +16289,7 @@
                                             <div data-testid="photo-viewer-section" class="_1xiaz2f5">
                                               <div class="account-container__menu-container">
                                                 <div class="_h5cegly">
-                                                  <div class="_125gmrun">
+                                                  <div class="img-grid__inner">
                                                     <div style="
                                                               display: grid;
                                                               grid-area: 1 / 1 /
@@ -21478,7 +21478,7 @@
                                                 <div data-testid="photo-viewer-section" class="_1gjkp1">
                                                   <div class="account-container__menu-container">
                                                     <div class="_h5cegly">
-                                                      <div class="_125gmrun">
+                                                      <div class="img-grid__inner">
                                                         <div style="
                                                               display: grid;
                                                               grid-area: 1 / 1 /
