--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -148,7 +148,7 @@
                                       class="h1i0omnt dir dir-ltr"
                                     >
                                       <span
-                                        class="_151wof4v"
+                                        class="card-horizontal__title"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 32px;
@@ -172,9 +172,9 @@
                                     padding-top: 24px;
                                     padding-bottom: 24px;
                                   ">
-                                  <div class="cffznj7 dir dir-ltr">
-                                    <div class="c14nl487 dir dir-ltr">
-                                      <div class="i1porrk5 dir dir-ltr">
+                                  <div class="horizontal-hero-card__wrapper dir dir-ltr">
+                                    <div class="horizontal-hero-card__body dir dir-ltr">
+                                      <div class="horizontal-hero-card__icon dir dir-ltr">
                                         <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="
                                             display: block;
                                             height: 48px;
@@ -188,15 +188,15 @@
                                           </g>
                                         </svg>
                                       </div>
-                                      <div class="t1ip2k9k dir dir-ltr">
-                                        <span class="_wah8ne" style="
+                                      <div class="horizontal-hero-card__title dir dir-ltr">
+                                        <span class="horizontal-hero-card__title-text" style="
                                             --tl-color: #222222;
                                             --tl-font-size: 18px;
                                             --tl-font-weight: 600;
                                             --tl-line-height: 22px;
                                           ">No trips booked...yet!</span>
                                       </div>
-                                      <div class="svigw52 dir dir-ltr">
+                                      <div class="horizontal-hero-card__text dir dir-ltr">
                                         <span class="page-shell-mobile__container-text" style="
                                             --tl-color: #717171;
                                             --tl-font-size: 14px;
@@ -204,7 +204,7 @@
                                             --tl-line-height: 20px;
                                           ">Time to dust off your bags and start planning your next&nbsp;adventure</span>
                                       </div>
-                                      <div data-testid="empty-state-action" class="self-stretch b13to4jp dir dir-ltr">
+                                      <div data-testid="empty-state-action" class="self-stretch horizontal-hero-card__btn-wrapper dir dir-ltr">
                                         <a aria-label="Start searching" href="/?source=itinerary" class="btn-primary">
                                           <span class="site-content__create-btn-wrap dir dir-ltr">
                                             <span class="site-content__create-btn dir dir-ltr" style="
@@ -283,7 +283,7 @@
                                       class="h1i0omnt dir dir-ltr"
                                     >
                                       <span
-                                        class="_151wof4v"
+                                        class="card-horizontal__title"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 22px;
@@ -321,9 +321,9 @@
                                               href="/trips/v1/5837df17-f2bc-4de8-ac20-3d93ca50e382/ro/EXPERIENCE_RESERVATION/8421665"
                                               class="button-container__wrapper"
                                             >
-                                              <div class="c1gmbq7c dir dir-ltr">
+                                              <div class="card-horizontal dir dir-ltr">
                                                 <div
-                                                  class="idybhsv dir dir-ltr"
+                                                  class="card-horizontal__img dir dir-ltr"
                                                 >
                                                   <div
                                                     class="img-middle"
@@ -388,7 +388,7 @@
                                                 <div>
                                                   <div>
                                                     <span
-                                                      class="_151wof4v"
+                                                      class="card-horizontal__title"
                                                       style="
                                                         --tl-color: #222222;
                                                         --tl-font-size: 16px;
@@ -444,9 +444,9 @@
                                               href="/trips/v1/0791a7d2-0fcd-41f4-9811-436952babbda/ro/EXPERIENCE_RESERVATION/8408312"
                                               class="button-container__wrapper"
                                             >
-                                              <div class="c1gmbq7c dir dir-ltr">
+                                              <div class="card-horizontal dir dir-ltr">
                                                 <div
-                                                  class="idybhsv dir dir-ltr"
+                                                  class="card-horizontal__img dir dir-ltr"
                                                 >
                                                   <div
                                                     class="img-middle"
@@ -511,7 +511,7 @@
                                                 <div>
                                                   <div>
                                                     <span
-                                                      class="_151wof4v"
+                                                      class="card-horizontal__title"
                                                       style="
                                                         --tl-color: #222222;
                                                         --tl-font-size: 16px;
@@ -819,7 +819,7 @@
                                     class="h1i0omnt dir dir-ltr"
                                   >
                                     <span
-                                      class="_151wof4v"
+                                      class="card-horizontal__title"
                                       style="
                                         --tl-color: #222222;
                                         --tl-font-size: 32px;
@@ -850,9 +850,9 @@
                                     padding-bottom: 24px;
                                   "
                                 >
-                                  <div class="cffznj7 dir dir-ltr">
-                                    <div class="c14nl487 dir dir-ltr">
-                                      <div class="i1porrk5 dir dir-ltr">
+                                  <div class="horizontal-hero-card__wrapper dir dir-ltr">
+                                    <div class="horizontal-hero-card__body dir dir-ltr">
+                                      <div class="horizontal-hero-card__icon dir dir-ltr">
                                         <svg
                                           viewBox="0 0 48 48"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -878,9 +878,9 @@
                                           </g>
                                         </svg>
                                       </div>
-                                      <div class="t1ip2k9k dir dir-ltr">
+                                      <div class="horizontal-hero-card__title dir dir-ltr">
                                         <span
-                                          class="_wah8ne"
+                                          class="horizontal-hero-card__title-text"
                                           style="
                                             --tl-color: #222222;
                                             --tl-font-size: 18px;
@@ -889,7 +889,7 @@
                                           "
                                         >No trips booked...yet!</span>
                                       </div>
-                                      <div class="svigw52 dir dir-ltr">
+                                      <div class="horizontal-hero-card__text dir dir-ltr">
                                         <span
                                           class="page-shell-mobile__container-text"
                                           style="
@@ -902,7 +902,7 @@
                                       </div>
                                       <div
                                         data-testid="empty-state-action"
-                                        class="b13to4jp dir dir-ltr"
+                                        class="horizontal-hero-card__btn-wrapper dir dir-ltr"
                                       >
                                         <a
                                           aria-label="Start searching"
@@ -1019,7 +1019,7 @@
                                     class="h1i0omnt dir dir-ltr"
                                   >
                                     <span
-                                      class="_151wof4v"
+                                      class="card-horizontal__title"
                                       style="
                                         --tl-color: #222222;
                                         --tl-font-size: 22px;
@@ -1057,8 +1057,8 @@
                                             href="specific_trip.html"
                                             class="main-content__agenda-list-btn"
                                           >
-                                            <div class="c1gmbq7c dir dir-ltr">
-                                              <div class="idybhsv dir dir-ltr">
+                                            <div class="card-horizontal dir dir-ltr">
+                                              <div class="card-horizontal__img dir dir-ltr">
                                                 <div
                                                   class="img-middle"
                                                   style="
@@ -1130,7 +1130,7 @@
                                               <div>
                                                 <div>
                                                   <span
-                                                    class="_151wof4v"
+                                                    class="card-horizontal__title"
                                                     style="
                                                       --tl-color: #222222;
                                                       --tl-font-size: 16px;
@@ -1186,8 +1186,8 @@
                                             href="/trips/v1/0791a7d2-0fcd-41f4-9811-436952babbda/ro/EXPERIENCE_RESERVATION/8408312"
                                             class="main-content__agenda-list-btn"
                                           >
-                                            <div class="c1gmbq7c dir dir-ltr">
-                                              <div class="idybhsv dir dir-ltr">
+                                            <div class="card-horizontal dir dir-ltr">
+                                              <div class="card-horizontal__img dir dir-ltr">
                                                 <div
                                                   class="img-middle"
                                                   style="
@@ -1258,7 +1258,7 @@
                                               <div>
                                                 <div>
                                                   <span
-                                                    class="_151wof4v"
+                                                    class="card-horizontal__title"
                                                     style="
                                                       --tl-color: #222222;
                                                       --tl-font-size: 16px;
