--- a/listings-product/wishlists.html
+++ b/listings-product/wishlists.html
@@ -239,7 +239,7 @@
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
-                                              <div class="_miupcl">
+                                              <div class="img-grid">
                                                 <div
                                                   class="img-middle"
                                                   role="img"
@@ -310,7 +310,7 @@
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
-                                              <div class="_miupcl">
+                                              <div class="img-grid">
                                                 <div
                                                   class="img-middle"
                                                   role="img"
@@ -371,7 +371,7 @@
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
-                                              <div class="_miupcl">
+                                              <div class="img-grid">
                                                 <div
                                                   class="img-middle"
                                                   role="img"
@@ -434,7 +434,7 @@
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
-                                              <div class="_miupcl">
+                                              <div class="img-grid">
                                                 <div
                                                   class="img-middle"
                                                   role="img"
@@ -497,7 +497,7 @@
                                         >
                                           <div class="flex">
                                             <div class="tab__checkbox-mr-16">
-                                              <div class="_miupcl">
+                                              <div class="img-grid">
                                                 <div
                                                   class="img-middle"
                                                   role="img"
