--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -5066,7 +5066,7 @@
                                           <div data-testid="photo-viewer-section" class="_1xiaz2f5">
                                             <div class="account-container__menu-container">
                                               <div class="_h5cegly">
-                                                <div class="_125gmrun">
+                                                <div class="img-grid__inner">
                                                   <div style="display: grid; grid-area: 1 / 1 / auto / auto;">
                                                     <div class="wh-full" style="grid-area: 1 / 1 / auto / auto;">
                                                       <div class="image-container"><button data-modal="#lightbox-modal-mobile" id="scrollTo_783219838"
@@ -6904,7 +6904,7 @@
                                               <div data-testid="photo-viewer-section" class="_1gjkp1">
                                                 <div class="account-container__menu-container">
                                                   <div class="_h5cegly">
-                                                    <div class="_125gmrun">
+                                                    <div class="img-grid__inner">
                                                       <div style="display: grid; grid-area: 1 / 1 / auto / auto;">
                                                         <div class="wh-full" style="grid-area: 1 / 1 / auto / auto;">
                                                           <div class="image-container"><button data-modal="#lightbox-modal" id="scrollTo_783219838"
