--- a/landing-pages/onlinehost.html
+++ b/landing-pages/onlinehost.html
@@ -2459,7 +2459,6 @@
               </div>
               <div
                 class="landing-page-billboard-overlay-container"
-                style="justify-content: center"
               >
                 <div>
                   <div class="landing-page-section-container">
@@ -2473,7 +2472,7 @@
                                   class="landing-page-billboard-overlay-title"
                                   style="color: #ffffff"
                                 >
-                                  <p class="landing-page-text-reset">
+                                  <p class="landing-page-text-reset text-small">
                                     Learn more about hosting with Airbnb
                                     Experiences
                                   </p>
