--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -353,10 +353,10 @@
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 8px 8px 0px 0px;
-                                          border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
+                                          border-top-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-right-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-left-color: var(--comboInputGroup_borderColor, var(--gray-400));
                                           border-width: 1px;
                                           z-index: 0;
                                          "
@@ -379,10 +379,10 @@
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
-                                          border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
+                                          border-top-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-right-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-left-color: var(--comboInputGroup_borderColor, var(--gray-400));
                                           border-width: 1px;
                                           z-index: 0;
                                          "
@@ -405,10 +405,10 @@
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
-                                          border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
+                                          border-top-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-right-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-left-color: var(--comboInputGroup_borderColor, var(--gray-400));
                                           border-width: 1px;
                                           z-index: 0;
                                          "
@@ -431,10 +431,10 @@
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
-                                          border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
+                                          border-top-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-right-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-left-color: var(--comboInputGroup_borderColor, var(--gray-400));
                                           border-width: 1px;
                                           z-index: 0;
                                          "
@@ -457,10 +457,10 @@
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
-                                          border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
+                                          border-top-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-right-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-left-color: var(--comboInputGroup_borderColor, var(--gray-400));
                                           border-width: 1px;
                                           z-index: 0;
                                          "
@@ -738,10 +738,10 @@
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px 0px 8px 8px;
-                                          border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
-                                          border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca));
+                                          border-top-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-right-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400));
+                                          border-left-color: var(--comboInputGroup_borderColor, var(--gray-400));
                                           border-width: 1px;
                                           z-index: 0;
                                          "
