--- a/payments/payment.html
+++ b/payments/payment.html
@@ -11085,7 +11085,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                                 </svg></div>
                             </div>
                             <div class="presentation-dialog-spacer"
-                              style="inset: 0px 0px -1px; border-radius: 8px 8px 0px 0px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
+                              style="inset: 0px 0px -1px; border-radius: 8px 8px 0px 0px; border-top-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-right-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-left-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-width: 1px; z-index: 0;">
                             </div>
                           </div>
                         </div>
@@ -11107,7 +11107,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                                 </div>
                               </label></div>
                             <div class="presentation-dialog-spacer"
-                              style="inset: 0px 0px -1px; border-radius: 0px 0px 8px 8px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
+                              style="inset: 0px 0px -1px; border-radius: 0px 0px 8px 8px; border-top-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-right-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-left-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-width: 1px; z-index: 0;">
                             </div>
                           </div>
                         </div>
