--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -7017,7 +7017,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                         </svg></div>
                                                                     </div>
                                                                     <div class="presentation-dialog-spacer"
-                                                                      style="inset: 0px 0px -1px; border-radius: 8px 8px 0px 0px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
+                                                                      style="inset: 0px 0px -1px; border-radius: 8px 8px 0px 0px; border-top-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-right-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-left-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-width: 1px; z-index: 0;">
                                                                     </div>
                                                                   </div>
                                                                 </div>
@@ -7041,7 +7041,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                         </div>
                                                                       </label></div>
                                                                     <div class="presentation-dialog-spacer"
-                                                                      style="inset: 0px 0px -1px; border-radius: 0px 0px 8px 8px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
+                                                                      style="inset: 0px 0px -1px; border-radius: 0px 0px 8px 8px; border-top-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-right-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-bottom-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-left-color: var(--comboInputGroup_borderColor, var(--gray-400)); border-width: 1px; z-index: 0;">
                                                                     </div>
                                                                   </div>
                                                                 </div>
