--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -30,7 +30,7 @@
                   >
                     <div class="explore-container__showmap dir dir-ltr">
                       <!-- Start Header -->
-                      <div class="h1wqqi3k dir dir-ltr">
+                      <div class="header-wrapper dir dir-ltr">
                         <div class="flex-before-after dir dir-ltr">
                           <div
                             style="--gp-section-max-width: 1120px"
